--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
@@ -19,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "react-redux": "^9.1.0",
     "sass": "^1.72.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
